fix: adjust match size validation and rating filters